--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
+  <meta name="google-site-verification" content="GwIBgyVh47R0PQsmigdlK0tWDoJIjZIyO6GQjL0X998" />
   <meta name="description" content="Tanya Nicole Lustre's Portfolio – Virtual Assistant, Content Moderator, and Website Designer.">
   <meta name="keywords" content="Tanya Nicole Lustre, Virtual Assistant, Content Moderator, Web Designer, Portfolio, HTML, CSS">
   <meta name="author" content="Tanya Nicole Lustre">
