--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-  <meta name="google-site-verification" content="GwIBgyVh47R0PQsmigdlK0tWDoJIjZIyO6GQjL0X998" />
   <meta name="description" content="Tanya Nicole Lustre's Portfolio – Virtual Assistant, Content Moderator, and Website Designer.">
   <meta name="keywords" content="Tanya Nicole Lustre, Virtual Assistant, Content Moderator, Web Designer, Portfolio, HTML, CSS">
   <meta name="author" content="Tanya Nicole Lustre">
@@ -31,7 +30,7 @@
     <!-- Main Content Area -->
     <div class="main-content">
       <!-- Home Section -->
-      <div id="home" class="content-box">
+      <div id="about" class="content-box">
         <h1>Tanya Nicole P. Lustre</h1>
         <p>Welcome to my portfolio! Explore my skills, experiences, and projects.</p>
       </div>
