--- a/index.html
+++ b/index.html
@@ -66,18 +66,21 @@
             <h3>Skills</h3>
             <p><span class="emoji">💻</span> HTML <span class="stars">⭐⭐⭐⭐⭐</span></p>
             <p><span class="emoji">🎨</span> CSS <span class="stars">⭐⭐⭐⭐⭐</span></p>
+            <p><span class="emoji">🎨</span> Canva <span class="stars">⭐⭐⭐⭐⭐</span></p>
+            <p><span class="emoji">🎨</span> UI design <span class="stars">⭐⭐⭐⭐⭐</span></p>
             <p><span class="emoji">📜</span> JavaScript <span class="stars">⭐⭐⭐⭐</span></p>
             <p><span class="emoji">🎥</span> TikTok Editing <span class="stars">⭐⭐⭐⭐⭐</span></p>
             <p><span class="emoji">📊</span> Microsoft Office <span class="stars">⭐⭐⭐⭐</span></p>
             <p><span class="emoji">📚</span> Google Suite <span class="stars">⭐⭐⭐⭐</span></p>
             <p><span class="emoji">💻</span> Basic Programming (C, Java, SQL) <span class="stars">⭐⭐⭐</span></p>
-            <p><span class="emoji">🔧</span> Responsive Design <span class="stars">⭐⭐⭐⭐</span></p>
-            <p><span class="emoji">🖌️</span> Layout Structuring <span class="stars">⭐⭐⭐⭐</span></p>
+            <p><span class="emoji">🖌️</span> Web and Mobile App Designing <span class="stars">⭐⭐⭐⭐</span></p>
             <p><span class="emoji">📝</span> Data Entry <span class="stars">⭐⭐⭐⭐⭐</span></p>
           </div>
           <div class="experience-box">
             <h3>Experience</h3>
             <p><span class="emoji">📧</span> 2 Years - Chat & Email Support</p>
+            <p><span class="emoji">💻</span> Back Office Admin</p>
+            <p><span class="emoji">💻</span> Virtual Assistant</p>
             <p><span class="emoji">📞</span> 8 Months - Outbound Calls</p>
             <p><span class="emoji">🏨</span> Hostel Intern - Guest Reception</p>
             <p><span class="emoji">🗺️</span> Tourism Office - Front Desk & Info</p>
