--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <p><span class="emoji">📱</span> WhatsApp: <a href="https://wa.me/+639691202125">+639691202125</a></p>
           <p><span class="emoji">📱</span> Telegram: <a href="https://t.me/tanyalus3">tanyalus3</a></p>
           <p><span class="emoji">📱</span> Instagram: <a href="https://www.instagram.com/tannnn.nl">tannnn.nl</a></p>
-          <p><span class="emoji">💬</span> Facebook: <a href="https://www.facebook.com/TanyaNicole">Tanya Nicole</a></p>
+          <p><span class="emoji">💬</span> Facebook: <a href="https://www.facebook.com/MaffyTaffy16/">Tanya Nicole</a></p>
           
           <form id="contactForm">
             <label for="name">Name</label>
